@@ -1,3 +1,8 @@
+2004-02-04	blytkerchan
+	* empty_down.html: new file
+	* table_down.html: ditto
+	* download.html: ditto
+
 2004-02-03	blytkerchan
 	* empty_dev.html, empty_lang.html: new files
 
